[package]
name = "orderbook"
version = "0.1.3"
authors = ["ae <inv2004@gmail.com>"]
repository = "https://github.com/inv2004/orderbook-rs"
description = "Orderbook for Rust"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "data-structures" ]
keywords = [ "exchange", "coinbase", "bitcoin" ]

[dependencies]
uuid = { version = "0.7.1", features = ["v4"] }
approx = "0.3.0"
failure = "0.1.2"

[dev-dependencies]
coinbase-pro-rs = "0.2.5"
futures = "0.1.23"
tokio = "0.1.8"
tokio-tungstenite = "0.6.0"
