[package]
name = "orderbook"
version = "0.1.9"
authors = ["ae <inv2004@gmail.com>"]
repository = "https://github.com/inv2004/orderbook-rs"
description = "Orderbook for Rust"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "data-structures" ]
keywords = [ "exchange", "coinbase", "bitcoin" ]

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
failure = "0.1.5"

[dev-dependencies]
coinbase-pro-rs = "0.5.1"
futures = "0.1.29"
tokio = "0.1.8"
tokio-tungstenite = "0.9.0"
